--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts",
-    "dev:inspect": "nodemon --inspect src/index.ts",
+    "dev": "env-cmd -f env/.env nodemon src/index.ts",
+    "dev:inspect": "env-cmd -f env/.env nodemon --inspect src/index.ts",
     "watch": "tsc -w",
     "build": "tsc",
-    "start": "node dist/src/index.js",
+    "start": "env-cmd -f env/.env node dist/index.js",
     "test": "jest"
   },
   "dependencies": {
     "@types/supertest": "^2.0.12",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jest": "^29.3.1",
+    "mongodb": "^4.13.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3"
   },
