--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "env-cmd -f env/.env nodemon src/index.ts",
-    "dev:inspect": "env-cmd -f env/.env nodemon --inspect src/index.ts",
+    "dev:inspect": "env-cmd -f env/.env nodemon --exec ts-node --files src/index.ts",
     "watch": "tsc -w",
     "build": "tsc",
     "start": "env-cmd -f env/.env node dist/index.js",
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jest": "^29.3.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3"
@@ -28,6 +29,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.2.4",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^17.0.40",
     "nodemon": "^2.0.16",
     "prettier": "^2.8.1",
