--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jest": "^29.3.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
+    "nodemailer": "^6.9.1",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.0.3"
+    "ts-jest": "^29.0.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -31,6 +34,8 @@
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^17.0.40",
+    "@types/nodemailer": "^6.4.7",
+    "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.16",
     "prettier": "^2.8.1",
     "ts-node": "^10.8.1",
