--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.29.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.7.0",
     "express-validator": "^6.14.2",
     "jest": "^29.3.1",
     "jsonwebtoken": "^9.0.0",
@@ -28,15 +29,15 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.3",
-    "@types/supertest": "^2.0.12",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^17.0.40",
     "@types/nodemailer": "^6.4.7",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.16",
     "prettier": "^2.8.1",
